Fix some more files